                                      Xbox Media Center CHANGELOG
************************************************************************************************************* 
*************************************************************************************************************

added/fixed: (dd-mm-yyyy) (please specify date in CET)
  - 15-11-2004 added: New screensaver interface/API with Template and sample (Pyro) screensaver
  - 15-11-2004 updated: German (Austrian) language file (Thnx to CEOMR)
  - 15-11-2004 updated: Portuguese (Brazil) language file (Thnx to wellingtontu)
  - 15-11-2004 fixed: Crash in dialogs if some dialog skin files weren't present.
  - 15-11-2004 fixed: Less intrusive warning on Kai disconnection and better reconnection facilities.
  - 14-11-2004 updated: Romanian language file (Thnx to bompy)
  - 14-11-2004 fixed: Reconnection to Kai engine after disconnection.
  - 14-11-2004 added: Kai default games directory set to f:\games
  - 13-11-2004 added: Kai Toast - pop up notifications for XLink Kai function
  - 13-11-2004 added: Kai Auto Play - automatically launch games off the harddrive
  - 13-11-2004 added: Kai Network Settings - configure games directory and notifications.
  - 13-11-2004 added: Kai Netowrk Dialogs - help for n00bs
  - 13-11-2004 added: RealMedia RTSP/RDT support
  - 13-11-2004 fixed: <alignY>, <textoffsetX>, <textoffsetY> didn't work for listcontrolex
  - 13-11-2004 fixed: My Pictures shows folder thumb for parent folder items
  - 13-11-2004 fixed: Lockup adding artist folders to playlist (sf bug #1062846)
  - 13-11-2004 fixed: Alpha level errors that occured with some button types (radio button etc.)
  - 13-11-2004 fixed: prevent switching to vis during slideshow (stops slideshow)
  - 13-11-2004 updated: French language file (Thnx to modhack2)
  - 13-11-2004 updated: Portuguese (Brazil) language file (Thnx to wellingtontu)
  - 13-11-2004 updated: Italian language file (Thnx to kotix)